test/pass/match.ditto
func main()
    int x := -1;
    int salida := -100;

    /// Solo otherwise
    match x is
        otherwise
            salida := 0;
    end
    print(salida);

    x := 1000;
    match x is 
        case -1000 do
            salida := 1;
        case 1000 do
            salida := 10;
        otherwise
            salida := 0;
    end
    print(salida);
    
    /// Deberia salir 10 otra vez, porque no hay branch para 3
    x := 3;
    match x is
        case -1 do
            salida := 1;
        case 2 do
            salida := 10;
    end
    print(salida);
    
    x := 2;
    match x is
        case -1 do
            salida := 1;
        case 2 do
            salida := 20;
    end
    print(salida);

    x := 3;
    match x is
        case -1 do
            x := 4;
            salida := 1;
        case 2 do
            x := -1;
            salida := 10;
        otherwise
            salida := 0;
    end
    print(salida);

    bool b := true;
    match b is
        case true do
            salida := 1;
        case false do
            salida := 0;
    end
    print(salida);
end